syntax = "proto3";

option go_package = "./proto";

package endpoint.brainboost.account.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AccountService {
  rpc GetModelUsages(google.protobuf.Empty) returns (ModelUsages);
  rpc GetPayments(google.protobuf.Empty) returns (Payments);
}

message ModelUsages {
  message Usage {
    string model = 1;
    uint32 input = 2;
    uint32 output = 3;
    uint32 costs = 4;
  }

  repeated Usage items = 1;
}

message Payments {
  message Payment {
    string id = 1;
    google.protobuf.Timestamp date = 2;
    uint32 amount = 3;
  }

  repeated Payment items = 1;
}